# atmos

./: README.md  pyproject.toml
src/atmos/: __init__.py  kinematic.py  moisture.py  parcel.py  thermo.py  utils.py
