[project]
name = "atmos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numba>=0.65.1",
    "numpy>=2.4.6",
]

[project.scripts]
atmos = "atmos:main"

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/atmos"]

[tool.hatch.build.targets.sdist]
include = ["src/atmos/**/*"]

[tool.uv.sources]
atmos = { workspace = true }